# rust-ma-runtime

./: .gitignore  AGENTS.md  Cargo.toml  HOWTO.md  Makefile  README.md  REFERENCE.md  bootstrap.example.yaml  bootstrap.example.yaml.old  build.rs  default.acl
.github/workflows/: ci.yml
i18n/: README.md  am.ftl  ar.ftl  art-x-lyaric.ftl  bg.ftl  bn.ftl  cs.ftl  da.ftl  de.ftl  el.ftl  en.ftl  eo.ftl  es.ftl  et.ftl  ff.ftl  fi.ftl  fo.ftl  fr.ftl  ha.ftl  hat.ftl  hi.ftl  hr.ftl  hu.ftl  id.ftl  ig.ftl  is.ftl  it.ftl  ja.ftl  jam.ftl  kea.ftl  ko.ftl  kri.ftl  lt.ftl  lv.ftl  mg.ftl  mr.ftl  nb.ftl  nl.ftl  nn.ftl  om.ftl  (+24 more)
kinds/: ma-avatar.yaml  ma-counter.yaml  ma-house.yaml  ma-logger.yaml  ma-python-actor.yaml  ma-register.yaml  ma-room.yaml  ma-root.yaml  ma-set.yaml  ma-stateful-python.yaml  ma-stateless-ping.yaml  ma-stateless-python.yaml
lang/: en.ftl  nb.ftl
locales/: en.ftl  nb.ftl
ping/: Cargo.toml  Makefile
ping/src/: lib.rs
plugins/: Cargo.toml  Makefile
plugins/counter/: Cargo.toml  Makefile
plugins/counter/src/: lib.rs
plugins/register/: Cargo.toml  Makefile
plugins/register/src/: lib.rs
plugins/root/: Cargo.toml  Makefile
plugins/root/src/: lib.rs
plugins/set/: Cargo.toml  Makefile
plugins/set/src/: lib.rs
plugins/shared/: types.rs
root/: Cargo.toml  Makefile
root/src/: abi.rs  handlers.rs  lib.rs
src/: acl.rs  behaviour.rs  bootstrap.rs  crud.rs  entity.rs  eventloop.rs  i18n.json  i18n.rs  i18n.yaml  inbox.rs  ipfs.rs  kubo.rs  lib.rs  main.rs  manifest.rs  plugin.rs  republish.rs  rpc.rs  schedule.rs  scheduler_actor.rs  startup.rs  status.rs  testkubo.rs
src/crud/: acl.rs  config.rs  create.rs  entities.rs  grp.rs  helpers.rs  kinds.rs  mod.rs  namespaces.rs
src/plugin/: backend.rs  mod.rs
