[package]
name = "ma-ipfs-publisher"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22"
ciborium = "0.2"
cid = "0.11"
clap = { version = "4", features = ["derive"] }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
ma-core = { version = "0.8.0", default-features = false, features = ["config", "kubo", "iroh", "acl"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1"
zeroize = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
