[package]
name = "ma-runtime"
version = "0.1.5"
edition = "2021"
rust-version = "1.95"

[[bin]]
name = "ma"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"] }
ciborium = "0.2"
cid = "0.11"
clap = { version = "4", features = ["derive"] }
directories = "5"
extism = "1"
fluent = "0.16"
blake3 = "1"
libp2p-identity = "0.2"
ma-core = { version = "0.10", default-features = false, features = ["config", "kubo", "iroh", "acl"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-cron-scheduler = { version = "0.15", features = ["english"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
unic-langid = "0.9"
zeroize = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

