[package]
name = "ma-root-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "ma_root_plugin"

[dependencies]
extism-pdk = "1"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimise wasm size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
