[package]
name = "ma-root"
version = "0.1.0"
edition = "2021"

[lib]
name = "root"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
extism-pdk = "1"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
